[package]
name = "tokn"
version = "0.2.0"
description = "Claude Code usage meter"
authors = ["Sippakorn Suphapinyo"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tokn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["parsing"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints.rust]
# objc 0.2's msg_send!/sel! macros expand a `feature = "cargo-clippy"` cfg
# check that this crate doesn't define, tripping unexpected_cfgs under
# `clippy -D warnings`. The lint is noise here, not a real config issue.
unexpected_cfgs = { level = "allow" }
